# dissipate

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  deploy.sh  dev.sh
backend/: .env.example  Cargo.toml
backend/database/: schema.sql
backend/scripts/: install_sqlite.sh  seed.sh
backend/src/: auth.rs  db.rs  exports.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  utils.rs
docker/: DEPLOYMENT.md  Dockerfile  docker-compose.yml
frontend/: .env.development  index.html  package-lock.json  package.json  pwa-manifest.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EditModal.css  EditModal.tsx  LoadingSpinner.css  LoadingSpinner.tsx  LoginForm.css  LoginForm.tsx  MessageCard.css  MessageCard.tsx  MessageInput.css  MessageInput.tsx  ThemeToggle.css  ThemeToggle.tsx  Toast.css  Toast.tsx
frontend/src/pages/: Feed.css  Feed.tsx  Login.css  Login.tsx  PostDetail.css  PostDetail.tsx  Settings.css  Settings.tsx
frontend/src/services/: api.test.ts  api.ts
frontend/src/stores/: authStore.test.ts  authStore.ts  messagesStore.ts  uiStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
frontend/src/utils/: date.test.ts  date.ts
