[package]
name = "dissipate"
version = "0.1.0"
edition = "2021"

[lib]
name = "dissipate"
path = "src/lib.rs"

[[bin]]
name = "dissipate"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
dotenv = "0.15"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
rand = "0.8"

[dev-dependencies]
axum-test = "15"
tower = "0.5"
